--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
     </style>
 <body>
- <h1 class="align">Enter 4 digits!</h1>   
+ <h1 class="align">Enter 4 digits from 0 to 9!</h1>   
 <!-- <h1>1Strike 1Ball</h1> -->
 <!-- <form action="">
     <input type="text">
